# zigner

rust/db_handling/src/: error.rs  identities.rs
rust/definitions/src/: crypto.rs  helpers.rs  keyring.rs  navigation.rs
rust/generate_message/src/: make_message.rs  parser.rs
rust/signer/src/: signer.udl
rust/transaction_parsing/: Cargo.toml
rust/transaction_parsing/src/: error.rs  lib.rs  penumbra.rs
rust/transaction_signing/: Cargo.toml
rust/transaction_signing/src/: error.rs  lib.rs  penumbra.rs
