[package]
name = "transaction_signing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
parity-scale-codec = "3.6.9"
zeroize = { version = "1.7.0", features = ["std", "derive"] }

definitions = { path = "../definitions", default-features = false, features = ["active"] }
db_handling = { path = "../db_handling", default-features = false, features = ["active"] }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "49734dd1d72a00b9d3b87ba397661a63e0e17af3", default-features = false, features = ["full_crypto"] }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "49734dd1d72a00b9d3b87ba397661a63e0e17af3", default-features = false }
thiserror = "1.0.57"
anyhow = "1.0.82"
sled = "0.34"

# penumbra crypto dependencies
decaf377 = { version = "0.10.1", optional = true }
decaf377-rdsa = { version = "0.11", optional = true }
blake2b_simd = { version = "1.0.2", optional = true }
rand_chacha = { version = "0.3.1", optional = true }
bip32 = { version = "0.5", optional = true }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
pbkdf2 = { version = "0.12", optional = true }
poseidon377 = { version = "1.1.0", optional = true }
bech32 = { version = "0.11.0", optional = true }

[features]
default = []
penumbra = ["decaf377", "decaf377-rdsa", "blake2b_simd", "rand_chacha", "bip32", "hmac", "sha2", "pbkdf2", "poseidon377", "bech32"]


[dev-dependencies]
pretty_assertions = "1"
sled = "0.34.6"
constants = { path = "../constants" }
db_handling = {path = "../db_handling", default-features = false, features = ["active"]}
transaction_parsing = { path = "../transaction_parsing", default-features = false }
tempfile = "3.10"

[lib]
name = "transaction_signing"
crate-type = ["lib"]
